[package]
name = "tether-agent"
version = "0.1.0"
authors = ["Stephen Buchanan <stephen.buchanan@random.studio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["lib"]

[[example]]
name="publish"

[dependencies]
futures = "0.3.21"
paho-mqtt = "0.10"
rmp = "^0.8"
rmp-serde = "^1.0.0"

[dev-dependencies]
serde_derive = "1.0.133"
serde = "1.0.133"