[package]
name = "tether-agent"
description = "Standardised use of MQTT and MessagePack for inter-process communication"
version = "0.10.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/RandomStudio/tether"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12.1", default-features = false, features = [
  "bundled",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
log = "0.4.17"
env_logger = "0.7"
anyhow = "1.0.71"
