[package]
name = "tether-agent"
description = "Standardised use of MQTT and MessagePack for inter-process communication"
version = "0.14.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/RandomStudio/tether"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "send"
path = "../../examples/rust/send.rs"

[[example]]
name = "receive"
path = "../../examples/rust/receive.rs"

[[example]]
name = "custom_options"
path = "../../examples/rust/custom_options.rs"

[dependencies]
rumqttc = { version = "0.24.0", features = [
    "use-rustls",
    "use-native-tls",
    "websocket",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
log = "0.4.17"
env_logger = "0.7"
anyhow = "1.0.71"
# tokio-rustls = "0.26.1"
rustls-native-certs = "0.8.1"
# tokio-native-tls = "0.3.1"
[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
