[package]
name = "tether"
version = "0.1.2"
edition = "2021"

[dependencies]
tether-agent = { path = "../../base_agent/rs"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
log = "0.4.17"
env_logger = "0.7"
rmpv = { version = "0.4", features = ["with-serde"] }
clap = { version = "4.1.1", features = ["derive"] }

