[package]
name = "tether-utils"
description = "Utilities for Tether Systems"
version = "0.6.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/RandomStudio/tether"

[lib]

[[bin]]
name = "tether"


[dependencies]
tether-agent = { path = "../../base_agent/rs" }
# tether-agent = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
log = "0.4.17"
env_logger = "0.7"
rmpv = { version = "0.4", features = ["with-serde"] }
clap = { version = "4.1.1", features = ["derive"] }
ctrlc = "3.4.0"
anyhow = "1.0.71"
circular-buffer = "0.1.1"
crossterm = "0.26.1"
